# walkie-talkie-app

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/denizetkar/walkietalkieapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/denizetkar/walkietalkieapp/: BluetoothManager.kt  Config.kt  MainActivity.kt  MainApplication.kt  MainViewModel.kt  Screens.kt  WalkieTalkieService.kt
app/src/main/java/com/denizetkar/walkietalkieapp/bluetooth/: BleAdvertiserModule.kt  BleDiscoveryModule.kt  BleOperationQueue.kt  BlePeer.kt  BleTransport.kt  GattClientHandler.kt  GattServerHandler.kt
app/src/main/java/com/denizetkar/walkietalkieapp/logic/: AudioSessionManager.kt  MeshController.kt  MeshNetworkManager.kt  PacketUtils.kt  ProtocolUtils.kt  TopologyEngine.kt  VoiceManager.kt
app/src/main/java/com/denizetkar/walkietalkieapp/network/: BleDriver.kt  NetworkTransport.kt  TransportDataType.kt  TransportModels.kt
app/src/main/java/com/denizetkar/walkietalkieapp/utils/: ScanRateLimiter.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/denizetkar/walkietalkieapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build.ps1  build.rs  generate_bindings.ps1
rust/.cargo/: config.toml
rust/src/: lib.rs
(+1 files in other folders)
